Bug 107956 - Adding a text track should not make controls visible
Summary: Adding a text track should not make controls visible
Status: RESOLVED FIXED
Alias: None
Product: WebKit
Classification: Unclassified
Component: Media (show other bugs)
Version: 528+ (Nightly build)
Hardware: Unspecified Unspecified
: P2 Normal
Assignee: Eric Carlson
URL:
Keywords: InRadar
Depends on:
Blocks: 43668
  Show dependency treegraph
 
Reported: 2013-01-25 09:34 PST by Eric Carlson
Modified: 2013-01-27 12:12 PST (History)
5 users (show)

See Also:


Attachments
Proposed patch (9.25 KB, patch)
2013-01-25 09:49 PST, Eric Carlson
dino: review+
Details | Formatted Diff | Diff
Updated patch. (9.38 KB, patch)
2013-01-25 12:13 PST, Eric Carlson
webkit.review.bot: commit-queue-
Details | Formatted Diff | Diff
Updated patch. (9.48 KB, patch)
2013-01-25 13:19 PST, Eric Carlson
no flags Details | Formatted Diff | Diff

Note You need to log in before you can comment on or make changes to this bug.
Description Eric Carlson 2013-01-25 09:34:19 PST
Adding a text track makes controls visible
Comment 1 Eric Carlson 2013-01-25 09:49:17 PST
Created attachment 184767 [details]
Proposed patch
Comment 2 Eric Carlson 2013-01-25 12:13:30 PST
Created attachment 184791 [details]
Updated patch.

Updated patch as the first version sometimes creates hidden controls when we did not previously. This isn't really a change in functionality, but it causes some tests that dump the render tree to fail so attempt to restore the previous behavior. 

Not marking r? so the bots can chew on it first.
Comment 3 WebKit Review Bot 2013-01-25 12:58:46 PST
Comment on attachment 184791 [details]
Updated patch.

Attachment 184791 [details] did not pass chromium-ews (chromium-xvfb):
Output: http://queues.webkit.org/results/16122473

New failing tests:
media/media-captions-no-controls.html
Comment 4 Eric Carlson 2013-01-25 13:19:03 PST
Created attachment 184801 [details]
Updated patch.

Oops, the results for my new test depended on the side effect I removed in the second patch :-O
Comment 5 Eric Carlson 2013-01-25 13:43:15 PST
Comment on attachment 184801 [details]
Updated patch.

Committed r140862.
Comment 6 Radar WebKit Bug Importer 2013-01-27 12:12:36 PST
<rdar://problem/13093844>