Adding a text track should not make controls visible https://bugs.webkit.org/show_bug.cgi?id=107956

Source/WebCore:

Reviewed by Dean Jackson.

Test: media/media-captions-no-controls.html

* html/HTMLMediaElement.cpp:
(WebCore::HTMLMediaElement::updateActiveTextTrackCues): Call updateTextTrackDisplay.
(WebCore::HTMLMediaElement::updateTextTrackDisplay): New, call mediaControls->updateTextTrackDisplay()
    if we have controls.
(WebCore::HTMLMediaElement::setClosedCaptionsVisible):  Call updateTextTrackDisplay.
(WebCore::HTMLMediaElement::createMediaControls): Hide controls if they should not be
    visible. Minor drive by cleanup.
(WebCore::HTMLMediaElement::configureTextTrackDisplay): Drive by cleanup, pull the three lines
    from updateClosedCaptionsControls inline and delete it because this was the only caller.
* html/HTMLMediaElement.h:

LayoutTests:

Reviewed by  Dean Jackson.

* media/media-captions-no-controls-expected.txt: Added.
* media/media-captions-no-controls.html: Added.


Canonical link: https://commits.webkit.org/126176@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@140862 268f45cc-cd09-0410-ab3c-d52691b4dbfc